--- a/html/NavBar.html
+++ b/html/NavBar.html
@@ -23,6 +23,7 @@
   <a class="navBarElement" href="/">New seg job</a>
   <a class="navBarElement" href="/train">New train job</a>
   <a class="navBarElement" href="/serverManagement">Server manager</a>
+  <a class="navBarElement" href="/networkManagement">Network manager</a>
   <a class="navBarElement" href="/myJobs">My jobs</a>
   <span class="navBarElement">User: {user}</span>
   <a class="navBarElement" href="." onclick="logout(); return false;">Switch user</a>
