--- a/html/NetworkManagement.html
+++ b/html/NetworkManagement.html
@@ -2,26 +2,38 @@
   <head>
     {headLinksHTML}
     <script>
+      var reloadPaused = false;
       var reloadInterval = {autoReloadInterval};
       var reloaderID = window.setInterval(reloader, reloadInterval);
       function reloader() {{
-        if (document.getElementById("reloadCheckbox").checked) {{
+        if (document.getElementById("reloadCheckbox").checked && !reloadPaused) {{
           location.reload();
         }}
       }}
-      function rename(oldName) {{
+      function renameNetwork(oldName) {{
+        reloadPaused = true;
         var newName = prompt("What would you like to rename "+oldName+" to?", oldName);
         if (newName != null) {{
           var reallyRename = confirm('Are you sure you want to rename '+oldName+' to '+newName+'?');
           if (reallyRename) {{
             // Load rename page
-            window.location = '/manageNetworks/rename/'+oldName+'/'+newName;
+            window.location = '/networkManagement/rename/'+oldName+'/'+newName;
+          }} else {{
+            reloadPaused = false;
           }}
+        }} else {{
+          reloadPaused = false;
         }}
       }}
-      function confirmRemove(networkName) {{
+      function removeNetwork(networkName) {{
+        reloadPaused = true;
         var reallyRemove = confirm("Are you sure you want to remove the network named '"+networkName+"'? It will be moved to another folder, and will no longer be accessible to this server.");
-        return reallyRemove;
+        if (reallyRemove) {{
+          // Load rename page
+          window.location = '/networkManagement/remove/'+networkName;
+        }} else {{
+          reloadPaused = false;
+        }}
       }}
     </script>
   </head>
@@ -30,11 +42,11 @@
     <div class="section">
       <div class="container">
         <h1>Network Management</h1>
+        <h4>Network info:</h4>
         <div class="row">
           <div class="three columns"># of networks found:</div>
           <div class="nine columns"><strong>{numNetworks}</strong></div>
         </div>
-        <h4>Job info:</h4>
         <table class="u-full-width">
           <thead>
             <tr>
