Typo in augment show/hide javascript function

--- a/html/Train.html
+++ b/html/Train.html
@@ -3,7 +3,7 @@
   {headLinksHTML}
   <script>
     function updateAugmentParamVisibility() {{
-        var augmentCheck = document.getElementByID("augmentData");
+        var augmentCheck = document.getElementById("augmentData");
         var augmentParams = document.getElementById("augmentParams");
         augmentParams.style.display = augmentCheck.checked ? "block" : "none";
     }}
