--- a/html/Train.html
+++ b/html/Train.html
@@ -247,4 +247,7 @@
     </div>
   </div>
 </body onload="updateAugmentParamVisibility()">
+<script>
+  updateAugmentParamVisibility();
+</script>
 </html>
