Added loss and accuracy reporting
Also a few small formatting and display improvements.

--- a/html/CheckTrainProgress.html
+++ b/html/CheckTrainProgress.html
@@ -52,6 +52,12 @@
                 <div class="three columns"># of epochs complete:</div><div class="nine columns"><strong>{numEpochsComplete}/{numEpochsTotal}</strong></div>
               </div>
               <div class="row">
+                <div class="three columns">Loss:</div><div class="nine columns"><strong>{lastLoss}</strong> (best: {bestLoss})</div>
+              </div>
+              <div class="row">
+                <div class="three columns">Accuracy:</div><div class="nine columns"><strong>{lastAccuracy}</strong> (best: {bestAccuracy})</div>
+              </div>
+              <div class="row">
                 <div class="three columns">Est. time remaining:</div><div class="nine columns"><strong>{estimatedTimeRemaining}</strong></div>
               </div>
               <div class="row">
