--- a/html/Train.html
+++ b/html/Train.html
@@ -56,8 +56,8 @@
         <div class="row">
           <label class="three columns" for="trainingDataPath"
               aria-label="Specify the path to a training data .mat file. It should contain a struct
-                          with a field called 'imageStack' containing an NxWxH stack of images, and
-                          a field called 'maskStack' containing an NxWxH stack of corresponding
+                          with a field called 'imageStack' containing an NxHxW stack of images, and
+                          a field called 'maskStack' containing an NxHxW stack of corresponding
                           binary masks."
               data-balloon-pos="down"
               data-balloon-length="fit">
