Various typo and bug fixes

--- a/html/Index.html
+++ b/html/Index.html
@@ -81,7 +81,7 @@
               data-balloon-length="fit">
             Mask save directories (one per line):
           </label>
-          <textarea class="nine columns" rows="3" cols="30" id="maskSaveDirs" name="maskSaveDirs" value="">
+          <textarea class="nine columns" rows="3" cols="30" id="maskSaveDirs" name="maskSaveDirs" value=""></textarea>
         </div>
         <div class="row">
             <label class="label-body three columns" for="windowsStyle"
