Added "Click to expand'

--- a/html/FinalizeSegmentationJob.html
+++ b/html/FinalizeSegmentationJob.html
@@ -28,7 +28,7 @@
         </div>
         <div class="row">
           <details class="twelve columns">
-              <summary>List of video files:</summary>
+              <summary>List of video files (click to expand):</summary>
               <ul>
                   {videoList}
               </ul>
