Do not auto-update network manager by default

--- a/html/NetworkManagement.html
+++ b/html/NetworkManagement.html
@@ -63,7 +63,7 @@
         </table>
         <div class="row">
           <div class="three columns">Auto-reload</div>
-          <input class="one column" style="width: 20px; height: 20px;" type="checkbox" id="reloadCheckbox" name="reloadCheckbox" checked>
+          <input class="one column" style="width: 20px; height: 20px;" type="checkbox" id="reloadCheckbox" name="reloadCheckbox">
         </div>
       </div>
     </div>
