--- a/html/Train.html
+++ b/html/Train.html
@@ -14,7 +14,7 @@
   <div class="section">
     <div class="container">
       <h1 class="section-heading">
-        Segmentation Processor for Images of Tongues (SPIT)
+        NestSeg: Semantic Segmentation of Mouse Nests
       </h1>
     </div>
   </div>
