Revert "Deleted bottom tracking in nest_seg"
This reverts commit e8faefc3e567d804cb10b2a4aeaf86414c2f1eac.

--- a/html/FinalizeSegmentationJob.html
+++ b/html/FinalizeSegmentationJob.html
@@ -38,6 +38,9 @@
           <div class="three columns">Chosen top neural network:</div><div class="nine columns"><strong>{topNetworkName}</strong></div>
         </div>
         <div class="row">
+          <div class="three columns">Chosen bottom neural network:</div><div class="nine columns"><strong>{botNetworkName}</strong></div>
+        </div>
+        <div class="row">
           <div class="three columns">Top mask vertical offset:</div><div class="nine columns"><strong>{topOffset}</strong></div>
         </div>
         <div class="row">
@@ -45,6 +48,12 @@
         </div>
         <div class="row">
           <div class="three columns">Top mask width:</div><div class="nine columns"><strong>{topWidth}</strong></div>
+        </div>
+        <div class="row">
+          <div class="three columns">Bottom mask height:</div><div class="nine columns"><strong>{botHeight}</strong></div>
+        </div>
+        <div class="row">
+          <div class="three columns">Bottom mask width:</div><div class="nine columns"><strong>{botWidth}</strong></div>
         </div>
         <div class="row">
           <div class="three columns">Binary mask threshold:</div><div class="nine columns"><strong>{binaryThreshold}</strong></div>
