--- a/html/Index.html
+++ b/html/Index.html
@@ -109,10 +109,22 @@
                 If the network you want to use is not in this list, ask the server administrator to add it to the list of available networks."
               data-balloon-pos="down"
               data-balloon-length="fit">
-            Neural network name:
+            Top neural network name:
           </label>
           <select class="nine columns" name="topNetworkName" id="topNetworkName">
           {nopts_top}
+          </select>
+        </div>
+        <div class="row">
+          <label class="three columns" class="six columns" for="botNetworkName"
+              aria-label="Select a trained neural network to use to segment the bottom part of the videos.
+                If the network you want to use is not in this list, ask the server administrator to add it to the list of available networks."
+              data-balloon-pos="down"
+              data-balloon-length="fit">
+            Bot neural network name:
+          </label>
+          <select class="nine columns" name="botNetworkName" id="botNetworkName">
+          {nopts_bot}
           </select>
         </div>
         <div class="row">
@@ -121,7 +133,7 @@
                 For example, if the top of the top mask should be 20 pixels below the top of the video, enter 20."
               data-balloon-pos="down"
               data-balloon-length="fit">
-            Mask vertical offset:
+            Top mask vertical offset:
           </label>
           <input class="two columns" type="number" id="topOffset" name="topOffset" min="0" step="1" value="0">
         </div>
@@ -132,7 +144,7 @@
                 Some neural networks may have a predefined mask shape, some do not."
               data-balloon-pos="down"
               data-balloon-length="fit">
-            Mask height:
+            Top mask height:
           </label>
           <input class="two columns" type="number" id="topHeight" name="topHeight" min="0" step="1" value="">
         </div>
@@ -143,9 +155,31 @@
                 Some neural networks may have a predefined mask shape, some do not."
               data-balloon-pos="down"
               data-balloon-length="fit">
-            Mask width:
+            Top mask width:
           </label>
           <input class="two columns" type="number" id="topWidth" name="topWidth" min="0" step="1" value="">
+        </div>
+        <div class="row">
+          <label class="three columns" for="botHeight"
+              aria-label="Optional - specify the desired height of the bottom mask, in pixels.
+                If you want to allow the neural network settings to determine the mask height (most likely), leave this blank.
+                Some neural networks may have a predefined mask shape, some do not."
+              data-balloon-pos="down"
+              data-balloon-length="fit">
+            Bottom mask height:
+          </label>
+          <input class="two columns" type="number" id="botHeight" name="botHeight" min="0" step="1" value="">
+        </div>
+        <div class="row">
+          <label class="three columns" for="botWidth"
+              aria-label="Optional - specify the desired width of the bottom mask, in pixels.
+                If you want to allow the neural network settings to determine the mask height (most likely), leave this blank.
+                Some neural networks may have a predefined mask shape, some do not."
+              data-balloon-pos="down"
+              data-balloon-length="fit">
+            Bot mask width:
+          </label>
+          <input class="two columns" type="number" id="botWidth" name="botWidth" min="0" step="1" value="">
         </div>
         <div class="row">
           <label class="three columns" for="binaryThreshold"
